--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 asgiref==3.6.0
 attrs==22.2.0
+black==22.12.0
+click==8.1.3
 colorama==0.4.6
 Django==4.1.5
 exceptiongroup==1.1.0
 iniconfig==2.0.0
+mypy-extensions==0.4.3
 packaging==23.0
+pathspec==0.10.3
+platformdirs==2.6.2
 pluggy==1.0.0
 pytest==7.2.1
 pytest-django==4.5.2
