--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ click==8.1.3
 colorama==0.4.6
 coverage==7.0.5
 Django==4.1.5
+django-htmx==1.13.0
+django-taggit==3.1.0
 exceptiongroup==1.1.0
 factory-boy==3.2.1
 Faker==16.6.0
